--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "~5.0"
+		"laravel/framework": "~5.0",
+		"laravel/socialite": "2.0.*@dev"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
