--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,11 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+
+TWITTER_KEY=
+TWITTER_SECRET=
+TWITTER_REDIRECT=
+
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+FACEBOOK_REDIRECT=
